@@ -430,19 +430,27 @@ if ($_REQUEST['form'] == 'full_clone') {
 		'discoveryids' => $hostDiscoveryRuleids,
 		'inherited' => false,
 		'output' => API_OUTPUT_EXTEND,
+		'selectItems' => API_OUTPUT_EXTEND,
 		'expandDescription' => true
 	));
 	if (!empty($hostTriggerPrototypes)) {
 		$prototypeList = array();
 		foreach ($hostTriggerPrototypes as $triggerPrototype) {
+			// skip trigger prototypes with web items
+			if (httpItemExists($triggerPrototype['items'])) {
+				continue;
+			}
 			$prototypeList[$triggerPrototype['triggerid']] = $triggerPrototype['description'];
 		}
-		order_result($prototypeList);
 
-		$listBox = new CListBox('triggerprototypes', null, 8);
-		$listBox->setAttribute('disabled', 'disabled');
-		$listBox->addItems($prototypeList);
-		$hostList->addRow(_('Trigger prototypes'), $listBox);
+		if ($prototypeList) {
+			order_result($prototypeList);
+
+			$listBox = new CListBox('triggerprototypes', null, 8);
+			$listBox->setAttribute('disabled', 'disabled');
+			$listBox->addItems($prototypeList);
+			$hostList->addRow(_('Trigger prototypes'), $listBox);
+		}
 	}
 
 	// Graph prototypes
