@@ -7,6 +7,7 @@ A.F....... [ZBX-5074] redesign configuration of action (Eduard)
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+A.F....... [ZBX-5090] fixed errors when fully cloning a host that contains trigger prototypes with web items in the expression (Pavels)
 .......PS. [ZBX-4980] fixed error in decoding of big base64 encoded values (Andris)
 ..F....... [ZBX-5081] fixed simple slide show update changes slideids in a database (Toms)
 A......... [ZBX-5092] fixed the get method "nodeids" parameter not working in some APIs (Pavels)
@@ -53,6 +54,7 @@ A.F....... [ZBX-5074] redesign configuration of action (Eduard)
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+A.F....... [ZBX-5090] fixed errors when fully cloning a host that contains trigger prototypes with web items in the expression (Pavels)
 ....I..... [ZBXNEXT-1256] fixed example Linux partition LLD item (Richlv)
 .......PS. [ZBX-4980] fixed error in decoding of big base64 encoded values (Andris)
 ..F....... [ZBX-5081] fixed simple slide show update changes slideids in a database (Toms)
